--- a/projects/device-mgt/src/lib/device-list/device-list.component.html
+++ b/projects/device-mgt/src/lib/device-list/device-list.component.html
@@ -3,7 +3,7 @@
       nzBordered
       nzFooter="Footer"
       nzTitle="Header"
-      [nzData]="dataSet">
+      [nzData]="dataList">
       <thead>
         <tr>
           <th>Name</th>
